[package]
name = "sns_rewards_api_canister"
version = "0.1.0"
description = "Rewards canister to distribute custom token rewards for SNS participants."
edition = "2021"

[features]
inttest = []

[dependencies]
candid = { workspace = true }
canister_time = { path = '../../../libraries/canister_time' }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sns_governance_canister = { path = '../../../external_canisters/sns_governance/api' }
types = { path = '../../../libraries/types' }
num-bigint = {workspace = true}
