[package]
name = "sns_rewards"
version = "0.1.0"
description = "Rewards canister to distribute custom token rewards for SNS participants."
edition = "2021"
license = "AGPL-3.0-only"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
canister_time = { path = '../../../libraries/canister_time' }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
serde = { workspace = true }
sns_governance_canister = { path = '../../../external_canisters/sns_governance/api' }
sns_governance_canister_c2c_client = { path = '../../../external_canisters/sns_governance/c2c_client' }
types = { path = '../../../libraries/types' }
