[package]
name = "super_stats_v3"
version = "0.1.0"
edition = "2021"

[features]
inttest = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.12.2"
ic-cdk-macros = "0.8.4"
candid = { workspace = true }
serde = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-memory = "0.4.4"
hex = "0.4.2"
num-traits = "0.2.17"
super_stats_v3_api = { path = "../api" }
utils = { path = '../../../libraries/utils' }