[package]
name = "token_metrics_api"
version = "0.1.0"
description = "API for token metrics canister."
edition = "2021"

[features]
inttest = []

[dependencies]
candid = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
super_stats_v3_api = { path = "../../../canisters/super_stats_v3/api" }
types = { path = '../../../libraries/types' }
utils = { path = '../../../libraries/utils' }
