[package]
name = "usdg_canister"
version = "0.1.0"
description = "USDG protocol"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []  # Empty default features
inttest = []

[dependencies]
candid = { workspace = true }
ic0 = { workspace = true }
ic-cdk = { workspace = true }
ic-xrc-types = "1.2.0"
icrc-ledger-types =  { git = "https://github.com/dfinity/ic.git", rev = "1488a310043f6a0907f4a84ba7af00e3d90d16eb" }
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic.git", rev = "1488a310043f6a0907f4a84ba7af00e3d90d16eb" }
minicbor = { version = "0.25.1", features = ["alloc", "derive"] }
rust_decimal = "1.36.0"
serde = { workspace = true }

[dev-dependencies]
proptest = "1.5.0"